[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-dash"
version = "0.2.21"
description = "A local-first terminal dashboard for Codex sessions across machines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnab Acharya" }]
keywords = ["codex", "tui", "dashboard", "sessions"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
codex-dash = "codex_board:main"
codex-board = "codex_board:main"

[project.urls]
Homepage = "https://github.com/ArnabCodes/codex-dash"
Issues = "https://github.com/ArnabCodes/codex-dash/issues"

[tool.setuptools]
py-modules = ["codex_board"]
